# mx-chain-vm-go

./: .gitignore  .travis.yml  Makefile  README.md  WARNING-merge-status.txt  asyncreview.todo.txt  codecov.yml  coverage.txt  dummy-sc.txt  go.mod  go.sum  sonar-project.properties  vmhost-call-graph.dot
arwen/: arwen.go  asyncCall.go  asyncCall.pb.go  asyncCall.proto  asyncCallGroup.go  asyncContext.go  bigIntContainer.go  bigintOps.go  common.go  debuggingTrace.go  elrondProtectedStorage.go  elrondei.go  errorUserMsg.go  errorWrapping.go  errors.go  execution.go  helpers.go  helpers_test.go  host.go  interface.go  testInitializerInputs.go  testInitializerVMOutput.go  trace.go
arwendebug/: account.go  blockchain.go  blockchainHookMock.go  cli.go  common.go  common_test.go  constants.go  database.go  errors.go  facade.go  facade_test.go  interfaces.go  messages.go  messagesAccounts.go  messagesBase.go  messagesDeploy.go  messagesQuery.go  messagesRun.go  messagesUpgrade.go  server.go  server.http  server_test.http  session.go  testutils_test.go  todo.txt  utils.go  world.go  worldInput.go
arwenjsontest/: elrondProtectedStorage.go  exec.go  execScenario.go  execTest.go  stepCheckAccounts.go  stepCheckTxResult.go  stepRunTx.go  util.go
arwenmandos/: dump.go  elrondProtectedStorage.go  exec.go  execScenario.go  execTest.go  stepCheckAccounts.go  stepCheckTxResult.go  stepDumpWorld.go  stepRunTx.go  util.go  util_test.go
benchmarks/: benchmarks_test.go
config/: config.toml  file.go  gasCost.go  gasCostWASM.go  gasSchedule.go  gasSchedule_test.go  wasmGasCost.go
crypto/: cryptovm.go  errors.go  interface.go
debug/: debug.go
evm/: evmError.go  evmExecutor.go  evmExecutorFactory.go  evmInstance.go  evmInstanceHelper.go  evmLogger.go
executor/: evmHooks.go  executor.go  executorDebugger.go  executorError.go  executorFactory.go  executorImport.go  executorImportError.go  executorImportsInterface.go  executorInstance.go  executorInstanceBuilder.go  executorMemory.go  executorUsedOpcode.go  gasCostEVM.go  gasCostWASM.go  (+3 more)
test/contracts/exchange/: Cargo.toml  snippets.sh
test/contracts/exchange/output/: exchange.wasm
test/contracts/exchange/src/: lib.rs
test/contracts/exchange/wasm/: Cargo.toml
test/contracts/exchange/wasm/src/: lib.rs
test/contracts/promises/child-simple/wasm/: Cargo.toml
test/contracts/promises/child-simple/wasm/src/: lib.rs
test/contracts/promises/three-contracts/third-contract/wasm/: Cargo.toml
test/contracts/promises/three-contracts/third-contract/wasm/src/: lib.rs
test/contracts/rawrs/wasm/: Cargo.toml
test/contracts/rawrs/wasm/src/: lib.rs
(+3945 files in other folders)
