[package]
name = "exchange"
version = "0.0.1"
authors = [ "you",]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.7.1"
path = "../../../../elrond-wasm-rs/elrond-wasm"

[dependencies.elrond-wasm-derive]
version = "0.7.1"
path = "../../../../elrond-wasm-rs/elrond-wasm-derive"

[dependencies.elrond-wasm-node]
version = "0.7.1"
optional = true
path = "../../../../elrond-wasm-rs/elrond-wasm-node"
