[package]
name = "child-simple-wasm"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.child-simple]
path = ".."

[dependencies.elrond-wasm-output]
version = "0.11.0"
features = ["wasm-output-mode"]

[workspace]
