[package]
name = "third-contract-wasm"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.third-contract]
path = ".."

[dependencies.elrond-wasm-output]
version = "0.7.2"
features = ["wasm-output-mode"]

[workspace]
